--- a/config/locales/arb/support.yml
+++ b/config/locales/arb/support.yml
@@ -15,7 +15,10 @@ arb:
       month_letter: '%d %B %Y'
       short: '%b %d'
     month_names: ['', 'january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december']
-    order: [:month, :day, :year]
+    order: 
+    - :month
+    - :day
+    - :year
   datetime:
     distance_in_words:
       about_x_hours:
