--- a/config/locales/arb/support.yml
+++ b/config/locales/arb/support.yml
@@ -63,9 +63,15 @@ arb:
     # export_as: 'Export as %{exported}...'
     # items_per_page: 'Items per page'
     # menu: 'Menu'
-    next: 'التالي'
+    next: 'التالي' #?
     no_records: 'ولا اية سجل'
-    previous: 'السابق'
+    pagination:
+      # first: 'First page'
+      # last: 'Last page'
+      # next: 'Next page'
+      # previous: 'Previous page'
+      # showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
+    previous: 'السابق' #?
     x_per_page:
       # one: '%{count} per page'
       # other: '%{count} per page'
