--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -126,6 +126,7 @@ fra:
         confirmation: '%{attribute} est différent du champ de confirmation'
         contains_blank_line: '%{attribute} contient une ligne vide' #?
         contains_blank_page: '%{attribute} contient une page vide' #?
+        currency_does_not_match: 'La devise de "%{attribute}" ne correspond pas celle attendue : %{currency}'
         empty: '%{attribute} ne peut pas être vide'
         equal_to: '%{attribute} doit être égal à %{count}'
         even: '%{attribute} doit être impair'
@@ -151,7 +152,6 @@ fra:
         too_long: '%{attribute} est trop long (%{count} caractères maximum)'
         too_short: '%{attribute} est trop court (%{count} caractères minimum)'
         wrong_length: '%{attribute} n''est pas d''une bon longueur (%{count} caractères)'
-        currency_does_not_match: 'La devise de "%{attribute}" ne correspond pas celle attendue : %{currency}'
       models:
         cash:
           # currency_does_not_match: 'The currency of the %{journal} is different from that specified for the cash'
@@ -288,6 +288,7 @@ fra:
       profession: 'Profession'
       purchase: 'Achat'
       purchase_line: 'Ligne d''achat'
+      # purchase_nature: 'Purchase nature'
       role: 'Rôle'
       sale: 'Vente'
       sale_line: 'Ligne de vente'
@@ -328,15 +329,20 @@ fra:
     area_unit: 'Unité de surface'
     areas: 'Zones postales'
     arrived_on: 'Arrivé le'
+    # asset: 'Asset'
+    # asset_depreciations: 'Asset depreciations'
+    # assets: 'Assets'
     assimilated_taxes_amount: 'Montant des taxes assimilées'
     atmospheric_pressure: 'Pression atmosphérique'
     attorney: 'Mandataire'
     attorney_account: 'Compte mandataire associé'
     attorney_accounts: 'Comptes mandataires'
+    # attorneys: 'Attorneys'
     attribute_name: 'Nom de l''attribut'
     authorized_payments_count: 'Nombre d''encaissements autorisés'
     available_prices: 'Prix disponibles'
     available_products: 'Produits disponibles'
+    # available_stocks: 'Available stocks'
     balance: 'Solde'
     balance_amount: 'Solde'
     balances: 'Balances de compte'
@@ -353,10 +359,12 @@ fra:
     boolean_value: 'Valeur booléenne'
     born_on: 'Date de naissance'
     building: 'Bâtiment'
+    # buildings: 'Buildings'
     by_default: 'Par défaut'
     cache: 'Cache'
     cash: 'Trésorerie'
     cash_journals: 'Journaux de caisse'
+    # cash_transfers: 'Cash transfers'
     cashes: 'Trésoreries'
     cashes_accounts: 'Comptes de caisse'
     catalog_description: 'Description pour le catalogue'
@@ -368,8 +376,10 @@ fra:
     charges_accounts: 'Comptes de charge'
     check_number: 'N°Chèque'
     check_state: 'Vérifier l''état'
-    child_land_parcel: 'Sous-îlot' #?
+    # child_kinships: 'Child kinships'
+    child_land_parcel: 'Sous-îlot'
     children: 'Sous-nœuds'
+    # choice_custom_fields: 'Choice custom fields'
     choice_value: 'Valeur choix'
     choices: 'Choix de champ complémentaire'
     choices_count: 'Nb. Choix'
@@ -406,6 +416,7 @@ fra:
     consumption: 'Consommation (litres/heure)'
     contact: 'Adresse'
     contacts: 'Contacts'
+    # conveyors: 'Conveyors'
     country: 'Pays'
     created_at: 'Date et heure de création'
     created_on: 'Date de création'
@@ -415,10 +426,11 @@ fra:
     credited_quantity: 'Quantité déjà passée en avoir'
     credits: 'Avoirs'
     critic_quantity_min: 'Quantité minimum critique'
+    # critic_stocks: 'Critic stocks'
     crypt_key: 'Clé de cryptage'
     crypt_mode: 'Mode de cryptage'
     currency: 'Devise'
-    currency_rate: 'Taux de change' #?
+    currency_rate: 'Taux de change'
     current_financial_year: 'Exercice comptable en cours'
     custom_field: 'Champ complémentaire'
     custom_field_choices: 'Choix de champ complémentaire'
@@ -435,6 +447,7 @@ fra:
     declared_on: 'Déclarée le'
     default_contact: 'Contact par défaut'
     default_currency: 'Devise par défaut'
+    # default_stock: 'Default stock'
     deferred_payment: 'Crédit à reporter'
     delays: 'Délais'
     deleted_at: 'Supprimé le'
@@ -454,11 +467,14 @@ fra:
     deposit: 'Remise en banque'
     depositable_payments: 'Encaissements encaissables'
     depositables_account: 'Compte d''attente pour les encaissements à encaisser'
+    # depositables_incoming_payment_modes: 'Depositables incoming payment modes'
+    # depositables_journal: 'Depositables journal'
     deposits: 'Remises en banque'
     # deprecated_amount: 'Deprecated amount'
     # depreciable_amount: 'Depreciable amount'
     # depreciation: 'Depreciation'
     # depreciation_method: 'Depreciation method'
+    # depreciations: 'Depreciations'
     description: 'Description'
     dest_contact: 'Adresse de livraison' #?
     diff_less: 'Droits enlevés'
@@ -486,7 +502,7 @@ fra:
     emitter_cash: 'Trésorerie émettrice'
     emitter_currency: 'Devise émise'
     emitter_currency_rate: 'Taux de la devise émise'
-    emitter_journal_entry: 'Écriture de l''émission' #?
+    emitter_journal_entry: 'Écriture de l''émission'
     employed: 'Employé par la société'
     employees: 'employés'
     employment: 'Emploi/Rôle'
@@ -502,6 +518,7 @@ fra:
     entity_natures: 'Types de personne'
     entries: 'Écritures'
     entry: 'Écriture'
+    # entry_lines: 'Entry lines'
     establishment: 'Établissement'
     establishments: 'Établissements'
     event_natures: 'Types d''évènement'
@@ -510,9 +527,11 @@ fra:
     excise: 'Numéro d''accises'
     expense: 'Dépense'
     expense_type: 'Type de dépense'
+    # expenses: 'Expenses'
     expiration: 'Délai d''expiration du devis'
     expired_on: 'Date d''expiration'
     exportable: 'Exportable'
+    # exportable_columns: 'Exportable columns'
     expression: 'Expression'
     extension: 'Extension'
     family: 'Module'
@@ -540,7 +559,8 @@ fra:
     global_count: 'Population globale'
     global_credit: 'Crédit global'
     global_debit: 'Débit global'
-    group: 'Groupe' #?
+    # godchildren: 'Godchildren'
+    group: 'Groupe'
     has_downpayment: 'A un acompte'
     hashed_password: 'Mot de passe crypté'
     hour_duration: 'Heure(s)'
@@ -548,10 +568,14 @@ fra:
     iban_label: 'IBAN'
     id: 'ID'
     immobilizations_account: 'Compte d''immobilisation' #?
+    # immobilizations_products: 'Immobilizations products'
     importance: 'Importance'
     in_cash: 'En espèce'
     in_name: 'Abréviation incluse dans le nom de la personne'
     included: 'Incluse'
+    # incoming_deliveries: 'Incoming deliveries'
+    # incoming_delivery_lines: 'Incoming delivery lines'
+    # incoming_delivery_modes: 'Incoming delivery modes'
     incoming_payment_modes: 'Modes d''encaissement'
     incoming_payment_uses: 'Parties d''encaissement'
     incoming_payments: 'Encaissements'
@@ -580,6 +604,8 @@ fra:
     journals: 'Journaux'
     key: 'Clé'
     label: 'Libellé'
+    # land_parcel_groups: 'Land parcel groups'
+    # land_parcel_kinships: 'Land parcel kinships'
     land_parcels: 'Îlots'
     language: 'Langue'
     last_bank_statement: 'Dernier relevé bancaire'
@@ -616,12 +642,14 @@ fra:
     lost: 'En perte'
     luminance: 'Luminosité'
     mail: 'E-mail'
+    # mail_columns: 'Mail columns'
     major_accounts: 'Classes comptables'
     mandates: 'Responsabilités'
     min_duration: 'Minute(s)'
     mobile: 'Portable'
     mode: 'Mode'
     moved_on: 'Fait le'
+    # moves: 'Moves'
     name: 'Nom'
     name_1_to_2: 'Personne 1 ⇒ Personne 2'
     name_2_to_1: 'Personne 2 ⇒ Personne 1'
@@ -657,17 +685,21 @@ fra:
     original_name: 'Nom original'
     # outgoing_deliveries: 'Outgoing deliveries'
     # outgoing_delivery_lines: 'Outgoing delivery lines'
+    # outgoing_delivery_modes: 'Outgoing delivery modes'
     outgoing_payment_modes: 'Modes de décaissement'
     outgoing_payment_uses: 'Parties de décaissements'
     outgoing_payments: 'Décaissements'
+    # output_conveyors: 'Output conveyors'
     owner: 'Propriétaire'
     owner_type: 'Nature du propriétaire'
     paid: 'Réglée' #?
     paid_account: 'TVA déductible'
     paid_amount: 'Montant payé'
     paid_on: 'Réglé le'
+    # paid_taxes: 'Paid taxes'
     parent: 'Parent'
-    parent_land_parcel: 'Sur-îlot' #?
+    # parent_kinships: 'Parent kinships'
+    parent_land_parcel: 'Sur-îlot'
     parts: 'Affectations' #?
     parts_amount: 'Montant utilisé' #?
     password: 'Mot de passe'
@@ -708,7 +740,11 @@ fra:
     productable_products: 'Produits produisibles'
     production_chain: 'Chaîne de production'
     production_chain_conveyor: 'Convoyeur de chaîne de production' #?
-    production_chain_work_center: 'Centre d''opérations de chaîne de production' #?
+    production_chain_work_center: 'Centre d''opérations de chaîne de production'
+    # production_chain_work_center_lines: 'Production chain work center lines'
+    # production_chain_work_center_uses: 'Production chain work center uses'
+    # production_chain_work_centers: 'Production chain work centers'
+    # production_chains: 'Production chains'
     products: 'Produits'
     products_accounts: 'Comptes produits'
     profession: 'Profession'
@@ -719,11 +755,14 @@ fra:
     published: 'Publié'
     purchase: 'Achat'
     # purchase_amount: 'Purchase amount'
+    # purchase_invoices: 'Purchase invoices'
     purchase_line: 'Ligne d''achat'
     purchase_lines: 'Lignes d''achat'
+    # purchase_natures: 'Purchase natures'
     # purchased_on: 'Purchased on'
     purchases: 'Achats'
     purchases_account: 'Compte comptable de charges'
+    # purchases_products: 'Purchases products'
     quantity: 'Quantité'
     quantity_max: 'Quantité maximum'
     quantity_min: 'Quantité minimum'
@@ -775,10 +814,11 @@ fra:
     sales_invoice_lines: 'Lignes de facture' #?
     sales_invoices: 'Factures'
     sales_invoices_count: 'Nombre de factures' #?
+    # sales_products: 'Sales products'
     salt: 'Sel'
     scheduled: 'Encaissement programmé'
     second_move: 'Second mouvement' #?
-    second_stock_move: 'Second mouvement de stock' #?
+    second_stock_move: 'Second mouvement de stock'
     second_warehouse: 'Lieu de stockage du second mouvement'
     self_bank_accounts: 'Comptes bancaires en propre'
     self_cashes: 'Caisses en propre'
@@ -858,15 +898,24 @@ fra:
     transport: 'Transport'
     transport_on: 'Transport le'
     transporter: 'Transporteur'
+    # transporter_sales: 'Transporter sales'
     transporters: 'Transporteurs'
     transports: 'Transports'
     type: 'Type' #?
+    # unconfirmed_stock_transfers: 'Unconfirmed stock transfers'
+    # undelivered_incoming_deliveries: 'Undelivered incoming deliveries'
+    # undelivered_outgoing_deliveries: 'Undelivered outgoing deliveries'
     undelivered_quantity: 'Reste à livrer'
     unique_tracking: 'Numéro unique'
     unit: 'Unité'
     unit_quantity: 'Quantité par unité de surface'
     units: 'Unités'
+    # unlocked_payments: 'Unlocked payments'
+    # unpaid_responsibles: 'Unpaid responsibles'
+    # unpaid_sales: 'Unpaid sales'
     unquantifiable: 'Non quantifiable'
+    # untransportered_deliveries: 'Untransportered deliveries'
+    # unused_conveyors: 'Unused conveyors'
     updated_at: 'Mis à jour le'
     updater: 'Modificateur'
     usable_incoming_payments: 'Encaissements utilisables'
@@ -875,6 +924,7 @@ fra:
     usage_duration: 'Durée d''utilisation (heures)'
     use_range: 'Utiliser un intervalle de quantité'
     used_amount: 'Montant utilisé'
+    # useful_lines: 'Useful lines'
     user: 'Utilisateur'
     users: 'Utilisateurs'
     uses: 'Matériels utilisés'
@@ -884,6 +934,8 @@ fra:
     vat_submissive: 'Soumis à la TVA'
     virtual: 'Virtuel'
     virtual_quantity: 'Stock virtuel'
+    # waiting_deliveries: 'Waiting deliveries'
+    # waiting_transporters: 'Waiting transporters'
     warehouse: 'Lieu de stockage'
     warehouses: 'Lieux de stockage'
     webpass: 'Mot de passe web'
@@ -894,7 +946,7 @@ fra:
     with_deposit: 'Utiliser les remises en banque'
     with_tracking: 'Avec tracabilité'
     with_transport: 'Avec transport'
-    work_center: 'Centre d''opération' #?
+    work_center: 'Centre d''opération'
   models:
     account:
       label: '%{number} - %{name}'
