--- a/config/locales/fra/support.yml
+++ b/config/locales/fra/support.yml
@@ -63,15 +63,15 @@ fra:
     export_as: 'Exporter en %{exported}...'
     items_per_page: 'Éléments par page'
     menu: 'Menu'
-    next: 'Suivant'
+    next: 'Suivant' #?
     no_records: 'Aucun enregistrement'
     pagination:
-      showing_x_to_y_of_total: 'Enregistrements %{x} à %{y} sur %{total}'
       first: 'Début'
-      next: 'Suivant'
       last: 'Fin'
+      next: 'Suivant'
       previous: 'Précédent'
-    previous: 'Précédent'
+      showing_x_to_y_of_total: 'Enregistrements %{x} à %{y} sur %{total}'
+    previous: 'Précédent' #?
     x_per_page:
       one: '%{count} par page'
       other: '%{count} par page'
