--- a/config/locales/jpn/support.yml
+++ b/config/locales/jpn/support.yml
@@ -63,9 +63,15 @@ jpn:
     # export_as: 'Export as %{exported}...'
     # items_per_page: 'Items per page'
     menu: 'メニュー'
-    next: '次へ'
+    next: '次へ' #?
     no_records: '空'
-    previous: '前へ'
+    pagination:
+      # first: 'First page'
+      # last: 'Last page'
+      # next: 'Next page'
+      # previous: 'Previous page'
+      # showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
+    previous: '前へ' #?
     x_per_page:
       one: 'ページあたり%{count}行'
       other: 'ページあたり%{count}行'
