--- a/config/locales/spa/support.yml
+++ b/config/locales/spa/support.yml
@@ -63,9 +63,15 @@ spa:
     export_as: 'Exportar a %{exported}...'
     # items_per_page: 'Items per page'
     menu: 'Menú'
-    next: 'Siguiente'
+    next: 'Siguiente' #?
     no_records: 'Vacío'
-    previous: 'Anterior'
+    pagination:
+      # first: 'First page'
+      # last: 'Last page'
+      # next: 'Next page'
+      # previous: 'Previous page'
+      # showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
+    previous: 'Anterior' #?
     x_per_page:
       one: '%{count} por página'
       other: '%{count} por página'
